Included text provided by Heather Bowlby as additions to caveats, context, information for ISDB.

--- a/sections/isdb-marfis/isdbMarfis_en.Rmd
+++ b/sections/isdb-marfis/isdbMarfis_en.Rmd
@@ -26,7 +26,11 @@ load_rdata(c("isdb_rr"), "MAR", env = environment())
 write_meta(isdb_rr, "EN")
 ```
 
-The Industry Survey Database (ISDB) is a departmental database containing at-sea fish catch observations from commercial fishing vessels operating in the Northwest Atlantic. Records can be associated with regular commercial fishing activities, or can represent industry-led scientific surveys. Industry surveys are not spatially or temporally synoptic and, therefore, integrating additional information on presence and/or habitat use (i.e., spawning, migration, feeding areas) from larger-scale studies is strongly recommended. Fisheries catch and effort information for an individual license holder is considered personal information and is protected under section 19 of the Access to Information Act (https://laws-lois.justice.gc.ca/eng/acts/a-1/page-5.html#h-12), and, for a corporate license holder, is considered to be sensitive, proprietary information and protected under Section 20 of the Access to Information Act (https://laws-lois.justice.gc.ca/eng/acts/a-1/page-5.html#h-13).
+The Industry Survey Database (ISDB) is a departmental database containing at-sea fish catch observations from commercial fishing vessels operating in the Northwest Atlantic. Records can be associated with regular commercial fishing activities, or can represent industry-led scientific surveys. Industry surveys are not spatially or temporally synoptic and, therefore, integrating additional information on presence and/or habitat use (i.e., spawning, migration, feeding areas) from larger-scale studies is strongly recommended. 
+
+ISDB must not be considered, or treated, as one data source when plotting or analyzing spatial information/catch data. Each fleet, or fishery, is a single data source with specific characteristics that critically affect the information collected and thus the catch data available to be displayed spatially. When information is amalgamated from several fisheries that are affected by a various number of issues, the spatial representation of species may become uninformative and/or misleading. Please contact Heather.Bowlby@dfo-mpo.gc.ca and Mike.McMahon@dfo-mpo.gc.ca if you would like to learn more about their R package to facilitate the extraction of commercial logbook and observer data associated with commercial fisheries for the Maritimes Region (https://github.com/Maritimes/Mar.fleets).
+
+Fisheries catch and effort information for an individual license holder is considered personal information and is protected under section 19 of the Access to Information Act (https://laws-lois.justice.gc.ca/eng/acts/a-1/page-5.html#h-12), and, for a corporate license holder, is considered to be sensitive, proprietary information and protected under Section 20 of the Access to Information Act (https://laws-lois.justice.gc.ca/eng/acts/a-1/page-5.html#h-13).
 
 Without written consent, DFO is not permitted to release information or data products from ISDB (e.g., maps and data layers) that might reveal personal or third party information such as catch, landed values, and vessel-specific fishing locations, as this information is considered confidential. Information on privacy policy is available in the DFO staff informal release guidelines (i.e., Appendix B – “Catch and Effort and Quota Information: Do’s and Don’ts for Informal Release” (\\\\ent.dfo-mpo.ca\\ATLShares\\Shared\\ATIP Information\\Information_Release_Guidelines-eng.docx). If you are interested in including observer data in a publication, please remember to aggregate it (https://github.com/Maritimes/Mar.utils/blob/master/R/assess_privacy.r).
 
