add watershed to e-fishing section

--- a/app/Rmd/exec_summary.Rmd
+++ b/app/Rmd/exec_summary.Rmd
@@ -33,7 +33,7 @@ lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), s
 copy_rdata_files() # make sure data files are up to date.
 filesLoaded <- load_rdata(c("CommonData", "sardist_rr", "crithab_rr", "leatherback_rr",
                             "rv_rr", "pasBay_rr", "ilts_rr", "isdb_rr", "marfis_rr",
-                            "obisFish_rr", "sturg_rr", "ef_rr", "ocearch_rr", 
+                            "obisFish_rr", "sturg_rr", "ocearch_rr", 
                             "wsdb_rr", "whitehead_rr", "obisCet_rr", "blueWhaleHab_rr",
                             "nbw_rr", "narwc_rr", "rockweed_rr", "ebsa_rr",
                             "conservationSites_rr", "finWhale_rr", "harbourPorpoise_rr",
@@ -131,11 +131,6 @@ summarySarTable <- add_col_to_sar_summary(summarySarTable, "MARFIS", marfisSarTa
 obisTable <- create_sar_tables(obisFish_rr$data_sf, listed_species, extraCols = c())$sarData
 summarySarTable <- add_col_to_sar_summary(summarySarTable, "OBIS", obisTable, "Common Name", "Common Name")
 
-# ELECTROFISHING
-efTable <- create_table_ilts(ef_rr$data_sf, listed_species, uniqueCols = c("geometry", "year"))$sarData
-
-summarySarTable <- add_col_to_sar_summary(summarySarTable, "Electrofishing",
-                                          efTable, "Common Name", "Common Name")
 # STURGEON
 if (!is.null(sturg_rr$data_sf)) {
    sturgSummaryRow <- data.frame("CommonName" = c("Atlantic Sturgeon"))
