--- a/sections/conservationSites/conservationSites_en.Rmd
+++ b/sections/conservationSites/conservationSites_en.Rmd
@@ -1,3 +1,18 @@
+---
+output:
+  bookdown::html_document2:
+    number_sections: FALSE
+    theme: paper
+bibliography: '`r here::here("app/data/mybiblio.bib")`'
+---
+```{r child = here::here("sections/commonSections/commonIntro.Rmd")}
+if (FALSE) { #load in data:
+  lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), source)
+  studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) 
+  intro_setup(studyArea, env = environment())  
+}
+```
+
 ### **Draft Conservation Network Design** {#MPA-section}
 
 ```{r MPA-load, include=FALSE}
@@ -18,9 +33,8 @@ It is important to note that Marine Conservation Network Plan will be aligned wi
 
 ```{r MPA-load-data, results='asis'}
 mpaCols <- c("dodgerblue3", "red", "darkorchid", "lawngreen",  "cyan3")
-mpaAlphas <- c(0.5, 0.5, 0.5, 0.5, 0.5)
+mpaAlpha <- 0.5
 names(mpaCols) <- levels(as.factor(conservationSites_rr$data_sf[[conservationSites_rr$attribute]]))
-names(mpaAlphas) <- levels(as.factor(conservationSites_rr$data_sf[[conservationSites_rr$attribute]]))
 
 mpaClipped <- master_intersect(conservationSites_rr$data_sf,  mapDataList, getRegion=TRUE)
 
@@ -42,8 +56,8 @@ writeLines(mpaCheckOuput)
 
 ```{r mpa-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(conservationSites_rr, "EN"), 'Map of the Draft Conservation Network Design for the Scotian Shelf-Bay of Fundy Bioregion. Boundaries of the proposed new sites are preliminary and subject to change following engagement and consultation.')}
 if (!is.null(mpaClipped$regionData)){
-  plot_rr_sf(regionMap, mpaClipped$regionData, conservationSites_rr$attribute, outlines=FALSE, colorMap = mpaCols,
-                            alphaMap = mpaAlphas)
+  plot_rr_sf(regionMap, mpaClipped$regionData, conservationSites_rr$attribute, 
+             outlines=FALSE, colorMap = mpaCols, alpha = mpaAlpha)
 }
 ```
 
@@ -52,7 +66,7 @@ if(!is.null(mpaClipped$studyData)){
   mpaStudyLabels <- filter(st_centroid(mpaClipped$mapData), Id > 0) %>% dplyr::select(c("Id"))
 
   plot_rr_sf(areaMap, mpaClipped$mapData, conservationSites_rr$attribute, colorMap = mpaCols,
-             labelData = mpaStudyLabels, labelAttribute = "Id", alphaMap = mpaAlphas)
+             labelData = mpaStudyLabels, labelAttribute = "Id", alpha = mpaAlpha)
 }
 ```
 
