--- a/sections/electrofishing/ef_en.rmd
+++ b/sections/electrofishing/ef_en.rmd
@@ -6,17 +6,17 @@ output:
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
 ```{r child = here::here("sections/commonSections/commonIntro.Rmd")}
-if (FALSE) { #load in data:
+if (FALSE) { # load in data:
   lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), source)
-  studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) 
-  intro_setup(studyArea, env = environment())  
+  studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson"))
+  intro_setup(studyArea, env = environment())
 }
 ```
 
 ### **Regional Electrofishing Surveys** {#ef-section}
 
 ```{r ef-load, include=FALSE}
-load_rdata(c("ef_rr", "ws_rr"), "MAR", env = environment())
+load_rdata(c("ef_rr", "ws_rr", "rivers_rr"), "MAR", env = environment())
 ```
 
 ```{r ef-meta, results='asis'}
@@ -31,39 +31,49 @@ The following is information summarized from Gibson et al. (2011) and Bowlby et 
 
 efOutputList <- master_intersect(ef_rr$data_sf, mapDataList)
 wsOutputList <- master_intersect(ws_rr$data_sf, mapDataList)
+riversOutputList <- master_intersect(rivers_rr$data_sf, mapDataList)
 
 tableList <- create_sar_tables(efOutputList$studyData, listed_species, uniqueCols = c("geometry", "Year"))
 efAllTable <- tableList$allSpecies
 efSarTable <- tableList$sarData
 
+wsCols <- c("yellow", "grey")
+names(wsCols) <- c("Present", "Absent")
+
+
+efCols <- c("red", "black", "purple", "orange")
+names(efCols) <- levels(as.factor(ef_rr$data_sf[[ef_rr$attribute]]))
+
+
 if (!is.null(wsOutputList$studyData)) {
   row.names(wsOutputList$mapData) <- NULL
   wsOutputList$mapData$label <- row.names(wsOutputList$mapData)
   wsMapLabels <- filter(st_centroid(wsOutputList$mapData), label > 0) %>% dplyr::select(c("label"))
-  wsOutputList$mapData$hasSites <- FALSE
+  wsOutputList$mapData$hasSites <- "Absent"
   wsOutputList$mapData$ptCounts <- 0
 }
 
 if (!is.null(efOutputList$studyData)) {
   ptCounts <- lengths(st_intersects(wsOutputList$mapData, efOutputList$studyData))
-  wsOutputList$mapData$hasSites[ptCounts > 0] <- TRUE
+  wsOutputList$mapData$hasSites[ptCounts > 0] <- "Present"
   wsOutputList$mapData$ptCounts <- ptCounts
   ws_rr$attribute <- "hasSites"
 
-  summarySarTable <- add_col_to_sar_summary(summarySarTable, 
-                                            "[Electrofishing](#ef-section)",
-                                            efSarTable, "Common Name",
-                                            "Common Name")
+  summarySarTable <- add_col_to_sar_summary(
+    summarySarTable,
+    "[Electrofishing](#ef-section)",
+    efSarTable, "Common Name",
+    "Common Name"
+  )
 }
 
-if (!is.null(wsOutputList$studyData)){
+if (!is.null(wsOutputList$studyData)) {
   wsTable <- dplyr::select(wsOutputList$mapData, c("label", "WS_NAME", "ptCounts"))
   wsTable <- st_drop_geometry(wsTable)
   wsTable <- wsTable[order(-wsTable$ptCounts), ]
   names(wsTable) <- c("Label", "Watershed Name", "Number of Sites")
   row.names(wsTable) <- NULL
 }
-
 ```
 
 ```{r ef-check, echo=FALSE, results='asis',}
@@ -75,24 +85,30 @@ efReport <- if (is.null(efOutputList$studyData)) {
 writeLines(noquote(efReport))
 ```
 
-```{r ws-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(ef_rr, "EN"), 'Map showing watersheds in the search area defined by the user (red outline) used to query information from electrofishing survey records. Watersheds are coloured based on the precense of electrofishing sites. The absence of a species in this figure should be interpreted as an absence of tracking data, not necessarily as an absence of the species in the area.')}
-if (!is.null(wsOutputList$studyData)) {
-    plot_rr_sf(areaMap, wsOutputList$mapData, attribute=ws_rr$attribute, 
-               legendName="Sites in Watershed", labelAttribute="label",
-               labelData=wsMapLabels, alpha=0.5)
-}
-```
-
-```{r ef-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(ef_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from electrofishing survey records. The absence of a species in this figure should be interpreted as an absence of tracking data, not necessarily as an absence of the species in the area. Some sites were surveyed in multiple years.')}
+```{r ef-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(ef_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from electrofishing survey records. Some sites were surveyed in multiple years.')}
 if (!is.null(efOutputList$studyData)) {
-  plot_rr_sf(areaMap, efOutputList$mapData, attribute = ef_rr$attribute)
+  efPlot <- plot_rr_sf(areaMap, riversOutputList$mapData,
+    outlines = FALSE,
+    attribute = rivers_rr$attribute
+  )
+
+  efPlot <- plot_rr_sf(efPlot, wsOutputList$mapData,
+    attribute = ws_rr$attribute,
+    legendName = "Sites in Watershed", labelAttribute = "label",
+    labelData = wsMapLabels, alpha = 0.5, colorMap = wsCols
+  )
+
+  plot_rr_sf(efPlot, efOutputList$mapData,
+    attribute = ef_rr$attribute, colorMap = efCols,
+    size = 3
+  )
 }
 ```
 <br>
 ```{r ef-ws-table}
 if (!is.null(efOutputList$studyData)) {
   if (nrow(wsTable) > 0) {
-    knitr::kable(wsTable, align="l", caption=paste("\\label{tab:ef_ws_table}", write_caption_blurb(ef_rr, "EN"), "Electrofishing survey records of sites contained within the search area and listed by watershed. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(wsTable, align = "l", caption = paste("\\label{tab:ef_ws_table}", write_caption_blurb(ef_rr, "EN"), "Electrofishing survey records of sites contained within the search area and listed by watershed.</b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
@@ -100,13 +116,13 @@ if (!is.null(efOutputList$studyData)) {
 ```{r ef-SAR-table}
 if (!is.null(efOutputList$studyData)) {
   if (nrow(efSarTable) > 0) {
-    knitr::kable(efSarTable, align="l", caption=paste("\\label{tab:ef_SAR_table}", write_caption_blurb(ef_rr, "EN"), "Electrofishing survey records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(efSarTable, align = "l", caption = paste("\\label{tab:ef_SAR_table}", write_caption_blurb(ef_rr, "EN"), "Electrofishing survey records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC).Frequency represents the subset of the sampling locations out of the total where each species is present. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
 <br>
 ```{r ef-all-table}
 if (!is.null(efOutputList$studyData)) {
-knitr::kable(efAllTable, align="l", caption=paste("\\label{tab:ef_all_table}", write_caption_blurb(ef_rr, "EN"), "Electrofishing survey records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(efAllTable, align = "l", caption = paste("\\label{tab:ef_all_table}", write_caption_blurb(ef_rr, "EN"), "Electrofishing survey records of all species contained within the search area, summarized by species or species group. Frequency represents the subset of the sampling locations out of the total where each species is present. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
