--- a/sections/ebsa/ebsa_fr.Rmd
+++ b/sections/ebsa/ebsa_fr.Rmd
@@ -16,7 +16,7 @@ if (FALSE) { #load in data:
 ### **Zones d’importance écologique et biologique (ZIEB)**  
 
 ```{r EBSA-load, include=FALSE}
-load_rdata(c("ebsa_rr"), "MAR", env = environment())
+load_rdata(c("ebsa_rr"), regionStr, env = environment())
 ```
 
 ```{r EBSA-meta, results='asis'}
