--- a/sections/blueWhaleHab/bwhab_en.Rmd
+++ b/sections/blueWhaleHab/bwhab_en.Rmd
@@ -16,7 +16,7 @@ if (FALSE) { #load in data:
 ### **Blue Whale Important Habitat** {#bwhab-section}
 
 ```{r bwhab-load, include=FALSE}
-load_rdata(c("blueWhaleHab_rr"), "MAR", env = environment())
+load_rdata(c("blueWhaleHab_rr"), regionStr, env = environment())
 ```
 
 ```{r bwhab-meta, results='asis'}
