--- a/sections/commonSections/commonIntro.Rmd
+++ b/sections/commonSections/commonIntro.Rmd
@@ -13,8 +13,9 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.align="lef
 
 ```{r echo=FALSE, include=FALSE, cache=FALSE}
 if (!exists("mapDataList")){
+  source(here::here("config.R"))
   lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), source) # check helpers.R for a   list of packages
   studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) # last area from app.
-  intro_setup(studyArea, env = environment())  
+  intro_setup(studyArea, env = environment(), regionStr=regionStr)  
 }
 ```
