--- a/sections/electrofishing/ef_en.rmd
+++ b/sections/electrofishing/ef_en.rmd
@@ -16,14 +16,16 @@ if (FALSE) { # load in data:
 ### **Regional Electrofishing Surveys** {#ef-section}
 
 ```{r ef-load, include=FALSE}
-load_rdata(c("ef_rr", "ws_rr", "rivers_rr"), "MAR", env = environment())
+load_rdata(c("ef_rr", "ws_rr", "rivers_rr"), regionStr, env = environment())
 ```
 
 ```{r ef-meta, results='asis'}
 write_meta(ef_rr, "EN")
 ```
 
-The following is information summarized from Gibson et al. (2011) and Bowlby et al. (2013). Region wide electrofishing surveys in the Southern Upland region of Nova Scotian rivers were conducted in 2000 and in 2008/2009. Both surveys were and found to be similar in terms of total effort and coverage with a few differences. Marginally more sites were completed in 2008–2009 than in 2000 (151 versus 128), and two more rivers were visited (54 in 2008–2009; 52 in 2000). The majority of rivers in the latter survey were electrofished in 2008. However, as water conditions in 2008 prevented sampling in several rivers (predominantly north of the St. Mary’s River), the survey was continued in 2009 to fill in this gap. Electrofishing surveys have supported assessments of Atlantic salmon juvenile abundance, and information about other species including American eel, Brook Trout, Brown Trout, and White Sucker. This sections provides information primarily on species presence during these surveys and was focused on detecting Atlantic Salmon. Sites were chosen to maximize the likelihood of encountering Atlantic Salmon and are not necessarily representative lotic habitat of the watersheds. Species identifications of non-salmonid species were not verified with voucher specimens so species presence or abundance must be interpreted with caution. Variation of electrofishing methods and use of barrier nets between sites affects the efficiency of electrofishing.  The absence of a species in the following summary should be interpreted as an absence of reporting, not necessarily as an absence of the species in a given river. For additional information, please access the following technical reports: [@Bowlby2009EF], [@Bowlby2013EF], [@Jones2018EF].
+The following is information summarized from Gibson et al. (2011) and Bowlby et al. (2013). Region wide electrofishing surveys in the Southern Upland region of Nova Scotian rivers were conducted in 2000 and in 2008/2009. Both surveys were and found to be similar in terms of total effort and coverage with a few differences. Marginally more sites were completed in 2008–2009 than in 2000 (151 versus 128), and two more rivers were visited (54 in 2008–2009; 52 in 2000). The majority of rivers in the latter survey were electrofished in 2008. However, as water conditions in 2008 prevented sampling in several rivers (predominantly north of the St. Mary’s River), the survey was continued in 2009 to fill in this gap. Electrofishing surveys have supported assessments of Atlantic salmon juvenile abundance, and information about other species including American eel, Brook Trout, Brown Trout, and White Sucker.
+
+This section provides information primarily on species presence during these surveys and was focused on detecting Atlantic Salmon. Sites were chosen to maximize the likelihood of encountering Atlantic Salmon and are not necessarily representative lotic habitat of the watersheds. Species identifications of non-salmonid species were not verified with voucher specimens, so species presence or abundance must be interpreted with caution. Variation of electrofishing methods and use of barrier nets between sites affects the efficiency of electrofishing.  The absence of a species in the following summary should be interpreted as an absence of reporting, not necessarily as an absence of the species in a given river. For additional information, please access the following technical reports: [@Bowlby2009EF], [@Bowlby2013EF], [@Jones2018EF].
 
 
 #### ***Area-specific electrofishing survey search results***
