--- a/sections/narwc/narwc_fr.Rmd
+++ b/sections/narwc/narwc_fr.Rmd
@@ -19,7 +19,7 @@ if (FALSE) { #load in data:
 ### **Base de données des observations du North Atlantic Right Whale Consortium (NARWC)**  {#NARWC-section}
 
 ```{r narwc-load, include=FALSE}
-load_rdata(c("narwc_rr"), "MAR", env = environment())
+load_rdata(c("narwc_rr"), regionStr, env = environment())
 ```
 
 ```{r narwc-meta, results='asis'}
