update opendata csv

--- a/sections/sardist/sardist_fr.Rmd
+++ b/sections/sardist/sardist_fr.Rmd
@@ -74,7 +74,7 @@ writeLines(Query_output_dist)
 ```
 
 ```{r sardist-plot, fig.height=plotHeight, fig.width=11, fig.cap=paste(write_caption_blurb(sardist_rr, "EN"), 'Maps showing the species distribution ranges overlapping with the search area defined by the user (red outline).')}
-if (!is.null(outputListSardist$studyData)) {
+if (FALSE) { # (!is.null(outputListSardist$studyData)) {
   gridExtra::grid.arrange(grobs = plotList,
                           bottom = "",
                           left = "",
