working benthic effort rmd

--- a/sections/benthicEffort/benthicEffort_fr.Rmd
+++ b/sections/benthicEffort/benthicEffort_fr.Rmd
@@ -10,33 +10,36 @@ bibliography: '`r here::here("app/data/mybiblio.bib")`'
 if (FALSE) { #load in data:
   lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), source)
   studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) 
-  intro_setup(studyArea, env = environment(), regionStr)  
+  intro_setup(studyArea, env = environment(), regionStr = regionStr)  
 }
 ```
 
-#### ***DFO Species at Risk distribution (range)*** {#sardist-section}    
+#### ***Répartition des espèces en péril du MPO (aire de répartition)*** {-}    
 
 ```{r sardist-load, include=FALSE}
 load_rdata(c("sardist_rr"), "MAR", env = environment())
 ```
 
 ```{r sardist-meta, results='asis'}
-write_meta(sardist_rr, "EN")
+write_meta(sardist_rr, "FR")
 ```
 
-Dataset description from the Open Data record [@OpenData_SARrange]:
+Description de l’ensemble de données (tirée du dossier des données ouvertes) : 
 ```{r sardist-text, results='asis'}
-writeLines(noquote(sardist_rr$text$en))
+writeLines(noquote(sardist_rr$text$fr))
 ```
 
-#### ***Area-specific SAR distribution search results***
+#### ***Résultats des recherches répartition des espèces en péril propres à une zone***
 
 ```{r sardist-results, echo=FALSE, results='asis'}
+# not plotted
 outputListSardist <- master_intersect(sardist_rr$data_sf, mapDataList)
 distTable <- create_sar_tables(outputListSardist$studyData, listed_species, extraCols = c("Species_Link"))$sarData
 names(distTable)[names(distTable) == 'Species_Link'] <- 'Species Link'
 
+
 summaryHabTable <- add_to_hab_summary(summaryHabTable, "range", "[SAR Distribution](#sardist-section)",  distTable, "Common Name", "Common Name")
+
 
 plotHeight <- 7
 #generate plots:
@@ -58,19 +61,20 @@ if (!is.null(outputListSardist$studyData)) {
   }
 }
 
+
 ```
 
 ```{r sardist-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Query_output_dist <- if(is.null(outputListSardist$studyData)){
-  "* The search area does not overlap with Species at Risk distribution range."
+  "* La zone de recherche ne chevauche pas l’aire de répartition des espèces en péril."
 } else {
-  "* The search area overlaps with Species at Risk distribution range."
+  "* La zone de recherche chevauche l’aire de répartition des espèces en péril."
 }
 writeLines(Query_output_dist)
 ```
-<br>
+
 ```{r sardist-plot, fig.height=plotHeight, fig.width=11, fig.cap=paste(write_caption_blurb(sardist_rr, "EN"), 'Maps showing the species distribution ranges overlapping with the search area defined by the user (red outline).')}
-if (FALSE) {# (!is.null(outputListSardist$studyData)) {
+if (FALSE) { # (!is.null(outputListSardist$studyData)) {
   gridExtra::grid.arrange(grobs = plotList,
                           bottom = "",
                           left = "",
@@ -80,6 +84,6 @@ if (FALSE) {# (!is.null(outputListSardist$studyData)) {
 
 ```{r sardist-table, echo=FALSE, results='asis'}
 if(!is.null(outputListSardist$studyData)){
-  knitr::kable(distTable, align="l", caption= paste(write_caption_blurb(sardist_rr, "EN"), "Species At Risk listed as Endangered, Threatened, or Special Concern under the <i>Species at Risk Act</i> with a documented distribution (range) located within the search area. This is not the authoritative source or advice for Species at Risk data. Please access the Species At Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create the authoritative SARA report."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+  knitr::kable(distTable, align="l", caption= "Quality Tier: High. Security level: none. Species At Risk listed as Endangered, Threatened or Special Concern under the <i>Species At Risk Act</i> for which the search polygon overlaps with their distribution (range). This is not the authoritative source or advice for Species At Risk data. Please access the Species At Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create anthe authoritative SARA report.", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 }
 ```
