update raster plot function

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -153,6 +153,13 @@ year = {2018}
   howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/db177a8c-5d7d-49eb-8290-31e6a45d786c}
 }
 
+@misc{OpenData_benthicEffort,
+  author = {DFO},
+  title = {Fishing effort within Significant Benthic Areas in Canada's Atlantic and Eastern Arctic marine waters},
+  year = {2018},
+  howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/273df20a-47ae-42c0-bc58-01e451d4897a}
+}
+
 @techreport{NARWCdatabase,
   author = {Kennedy, R.D.},
   title = {The North Atlantic Right Whale Consortium Database: A Guide for Users and Contributors},
