--- a/sections/benthicEffort/benthicEffort_en.Rmd
+++ b/sections/benthicEffort/benthicEffort_en.Rmd
@@ -23,7 +23,7 @@ load_rdata(c("benthicEffort_rr"), "MAR", env = environment())
 write_meta(benthicEffort_rr, "EN")
 ```
 
-Dataset description from the Open Data record [@OpenData_SARrange]:
+Dataset description from the Open Data record [@OpenData_benthicEffort]:
 ```{r benthicEffort-text, results='asis'}
 writeLines(noquote(benthicEffort_rr$text$en))
 ```
@@ -36,11 +36,11 @@ outputListBenthicEffort <- master_intersect(benthicEffort_rr$data_sf, mapDataLis
 ```
 
 <br>
-```{r benthicEffort-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(benthicEffort_rr, "EN"), 'Maps showing the benthic fishing effort with the search area defined by the user (red outline).')}
+```{r benthicEffort-plot, fig.height=7, fig.width=11, fig.show="hold", out.width="50%", fig.cap=paste(write_caption_blurb(benthicEffort_rr, "EN"), 'Maps showing the benthic fishing effort with the search area defined by the user (red outline).')}
 if (!is.null(outputListBenthicEffort$regionData)) {
   par(mar = c(4, 4, .1, .1))
-  plot(plot_rr_sf(mapDataList$areaMap, outputListBenthicEffort$mapData))
-  plot(plot_rr_sf(mapDataList$regionMap, outputListBenthicEffort$regionData))
+  plot(plot_rr_sf(mapDataList$areaMap, outputListBenthicEffort$mapData), bgCutoff=15)
+  plot(plot_rr_sf(mapDataList$regionMap, outputListBenthicEffort$regionData), bgCutoff=15)
 }
 ```
 
