--- a/sections/benthicEffort/benthicEffort_fr.Rmd
+++ b/sections/benthicEffort/benthicEffort_fr.Rmd
@@ -39,8 +39,8 @@ outputListBenthicEffort <- master_intersect(benthicEffort_rr$data_sf, mapDataLis
 ```{r benthicEffort-plot, fig.height=7, fig.width=11, fig.show="hold", out.width="50%", fig.cap=paste(write_caption_blurb(benthicEffort_rr, "FR"), 'Maps showing the benthic fishing effort with the search area defined by the user (red outline).')}
 if (!is.null(outputListBenthicEffort$regionData)) {
   par(mar = c(4, 4, .1, .1))
-  plot(plot_rr_sf(mapDataList$areaMap, outputListBenthicEffort$mapData), bgCutoff=15)
-  plot(plot_rr_sf(mapDataList$regionMap, outputListBenthicEffort$regionData), bgCutoff=15)
+  plot(plot_rr_sf(mapDataList$areaMap, outputListBenthicEffort$mapData, bgCutoff=15))
+  plot(plot_rr_sf(mapDataList$regionMap, outputListBenthicEffort$regionData, bgCutoff=15))
 }
 ```
 
